--- a/index.html
+++ b/index.html
@@ -189,14 +189,28 @@ footer{
   border-radius:5px;
 }
 
-/* Chat body */
 .chat-body{
   height:250px;
   overflow-y:auto;
   padding:12px;
 }
+.chat-input{display:flex;}
+.chat-input input{
+  flex:1;
+  padding:12px;
+  background:#222;
+  border:none;
+  color:#fff;
+}
+.chat-input button{
+  background:#00ff64;
+  border:none;
+  padding:12px 18px;
+  cursor:pointer;
+  font-weight:600;
+}
 
-/* Chat CTA Button */
+/* Chat CTA Button (inside chat) */
 .chat-cta{
   display:inline-block;
   margin-top:10px;
@@ -213,22 +227,6 @@ footer{
 .chat-cta:hover{
   background:#00cc50;
   box-shadow:0 0 18px #00ff64;
-}
-
-.chat-input{display:flex;}
-.chat-input input{
-  flex:1;
-  padding:12px;
-  background:#222;
-  border:none;
-  color:#fff;
-}
-.chat-input button{
-  background:#00ff64;
-  border:none;
-  padding:12px 18px;
-  cursor:pointer;
-  font-weight:600;
 }
 
 /* Fade */
@@ -332,103 +330,271 @@ footer{
 document.getElementById('hamburger').onclick = () =>
   document.getElementById('nav').classList.toggle('open');
 
-// CHAT
+// CHAT WIDGET
 const chatWidget = document.getElementById('chatWidget');
 const toggleChat = document.getElementById('toggleChat');
-const chatBody = document.getElementById('chatBody');
-const chatInput = document.getElementById('chatInput');
-const chatSend = document.getElementById('chatSend');
+const chatBody   = document.getElementById('chatBody');
+const chatInput  = document.getElementById('chatInput');
+const chatSend   = document.getElementById('chatSend');
 
-toggleChat.onclick = () => chatWidget.classList.toggle('minimized');
 chatWidget.classList.add('minimized');
+toggleChat.onclick = () => chatWidget.classList.toggle('minimized');
 
 setTimeout(()=>chatWidget.classList.remove('minimized'),1200);
 setTimeout(()=>chatWidget.classList.add('minimized'),4200);
 
-/* RULE ENGINE WITH CTA BUTTONS */
+// SIMPLE "MEMORY"
+const memory = {
+  lastTopic: null,   // 'trees', 'stumps', 'location', etc.
+  trees: null,
+  stumps: null,
+  city: null
+};
+
+// TRACK HOW OFTEN CATCH-ALL HITS IN A ROW
+let catchAllCounter = 0;
+
+// PRICE RESPONSE WITH CTA (ONLY USED ON MONEY QUESTIONS)
+const priceResponse =
+  "We provide FREE estimates. A team member will get back to you shortly.<br><br>" +
+  "<div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>";
+
+// SMART PRICE INTENT DETECTION
+function isPriceIntent(msg) {
+  const text = msg.toLowerCase();
+
+  const priceWords = [
+    "quote","estimate","price","cost","how much","budget",
+    "expensive","cheap","affordable","rate","rates","fee","fees",
+    "charge","charges","dollars","bucks"
+  ];
+
+  for (const w of priceWords) {
+    if (text.includes(w)) return true;
+  }
+
+  // contains a dollar sign
+  if (text.includes("$")) return true;
+
+  // number with tree/stump context
+  const hasNumber = /\b\d+\b/.test(text);
+  if (hasNumber && (text.includes("tree") || text.includes("stump"))) {
+    return true;
+  }
+
+  return false;
+}
+
+// RULE ENGINE (NO CTA INSIDE RULES – CTA ONLY FROM PRICE INTENT)
 const rules = [
 
-  { keywords:["remove","tree removal","cut down"],
-    response:"We offer safe, insured tree removal. How many trees are you dealing with?<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // TREE REMOVAL
+  {
+    keywords:["remove","tree removal","cut down"],
+    topic:"trees",
+    response:"We offer safe, insured tree removal. How many trees are you dealing with?"
   },
 
-  { keywords:["trim","trimming","prune","shaping"],
-    response:"We provide professional trimming. Are you trimming one or several trees?<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // TRIMMING
+  {
+    keywords:["trim","trimming","prune","shaping"],
+    topic:"trees",
+    response:"We provide professional trimming and shaping. Are you trimming one tree or several?"
   },
 
-  { keywords:["stump","grind","grinding"],
-    response:"We grind stumps below ground level. How many stumps do you have?<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // STUMPS
+  {
+    keywords:["stump","grind","grinding"],
+    topic:"stumps",
+    response:"We grind stumps below ground level. How many stumps do you have?"
   },
 
-  { keywords:["storm","fallen","emergency","wind"],
-    response:"We offer 24/7 storm cleanup. Is the tree causing damage?<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // SERVICE / SERVICES
+  {
+    keywords:[
+      "service",
+      "services",
+      "tree service",
+      "tree services",
+      "what do you do",
+      "what services do you offer",
+      "your services",
+      "types of work",
+      "list of services",
+      "do you do tree service"
+    ],
+    topic:"services",
+    response:"We offer tree removal, trimming, stump grinding, and 24/7 emergency storm cleanup. What type of project do you need help with?"
   },
 
-  { keywords:["quote","estimate","price","cost","much"],
-    response:"We provide FREE estimates. A team member will follow up shortly.<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // STORM / EMERGENCY
+  {
+    keywords:["storm","fallen","emergency","wind"],
+    topic:"emergency",
+    response:"We offer 24/7 storm cleanup. Did the tree fall on anything or block a driveway?"
   },
 
-  { keywords:["insured","insurance","licensed","bonded"],
-    response:"Yes — we are fully insured.<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // INSURANCE
+  {
+    keywords:["insured","insurance","licensed","bonded"],
+    topic:"insurance",
+    response:"Yes — we are fully insured for residential and commercial projects."
   },
 
-  { keywords:["area","location","service"],
-    response:"We service Charlotte, Matthews, Mint Hill, Pineville, and Concord.<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // SERVICE AREA (GENERAL)
+  {
+    keywords:["area","location","service area","serve","where","located","near","around"],
+    topic:"location",
+    response:"We service Charlotte, Matthews, Mint Hill, Pineville, Concord, Harrisburg, and nearby areas."
   },
 
-  { keywords:["yes","yeah","yep","ok","okay","sure"],
-    response:"Great! Call (704) 641-2888 or click below — a team member will get back to you shortly.<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // CITY NAMES
+  {
+    keywords:["charlotte","matthews","mint hill","pineville","concord","harrisburg"],
+    topic:"location",
+    response:"Yes, we service your area and most of the greater Charlotte region."
   },
 
-  { keywords:["one","two","three","1","2","3","four","4"],
-    response:"We can help with that! Click below and a team member will reach out shortly.<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // HOURS / AVAILABILITY
+  {
+    keywords:["hours","open","close","availability","available","when open","time open","time close"],
+    topic:"hours",
+    response:"We’re available 24/7 for all tree work and storm emergencies."
   },
 
-  { keywords:["not sure","maybe","idk"],
-    response:"No problem — we can walk you through it. Click below and a team member will follow up.<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // SCHEDULING
+  {
+    keywords:["schedule","time","when","day","tomorrow","today"],
+    topic:"schedule",
+    response:"We’re flexible and can usually work around your schedule. What day works best for you?"
   },
 
-  { keywords:["schedule","time","when"],
-    response:"We’re flexible! Click below and a team member will contact you shortly.<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // FOLLOW-UP CONFIRMATIONS
+  {
+    keywords:["yes","yeah","yep","ok","okay","sure"],
+    topic:"confirm",
+    response:"Got it — thanks! What else can you tell me about the job?"
   },
 
-  { keywords:["call","phone"],
-    response:"You can reach us at (704) 641-2888!<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>"
+  // PHONE
+  {
+    keywords:["call","phone"],
+    topic:"phone",
+    response:"You can reach us anytime at (704) 641-2888."
   },
 
-  { keywords:["hello","hi","hey"],
+  // GREETINGS
+  {
+    keywords:["hello","hi","hey"],
+    topic:"greeting",
     response:"Hi there! How can we help with your trees today?"
-  },
+  }
 ];
 
-/* SEND MESSAGE */
+function capitalize(str){
+  return str.charAt(0).toUpperCase() + str.slice(1);
+}
+
+// MEMORY-BASED FOLLOW-UPS
+function handleMemoryFollowUps(lowerMsg){
+  const numMatch = lowerMsg.match(/\b\d+\b/);
+
+  // Stump count after stump topic
+  if (numMatch && memory.lastTopic === 'stumps'){
+    memory.stumps = numMatch[0];
+    return `Got it — we'll note that you have ${memory.stumps} stump(s). If you’d like pricing, just ask for a quote or say “how much”.`;
+  }
+
+  // Tree count after tree topic
+  if (numMatch && memory.lastTopic === 'trees'){
+    memory.trees = numMatch[0];
+    return `Thanks — we'll note that you're asking about ${memory.trees} tree(s). If you’d like a free estimate, ask for a quote or say “how much”.`;
+  }
+
+  // City mention after location topic
+  if (memory.lastTopic === 'location'){
+    const cityMatch = lowerMsg.match(/charlotte|matthews|mint hill|pineville|concord|harrisburg/);
+    if (cityMatch){
+      memory.city = cityMatch[0];
+      return `Yes, we service ${capitalize(memory.city)} and the surrounding area.`;
+    }
+  }
+
+  return null;
+}
+
+// RULE-BASED RESPONSE (NO CATCH-ALL HERE)
+function findResponse(msg){
+  for (let r of rules){
+    for (let k of r.keywords){
+      if (msg.includes(k)){
+        if (r.topic) memory.lastTopic = r.topic;
+        return r.response;
+      }
+    }
+  }
+  return null; // no rule hit
+}
+
+// CATCH-ALL LOGIC WITH PHONE REDIRECT AFTER 2 HITS
+function catchAllResponse(){
+  catchAllCounter++;
+
+  if (catchAllCounter === 1){
+    return "I can help with anything tree-related — removal, trimming, stump grinding, or storm cleanup. Tell me a bit more about the project.";
+  }
+
+  if (catchAllCounter === 2){
+    return "No worries — it might be easier to talk with someone directly. You can call us anytime at (704) 641-2888. We’re available 24/7!";
+  }
+
+  return "Feel free to call us anytime at (704) 641-2888 — we’re here 24/7 to help!";
+}
+
+// SEND MESSAGE PIPELINE
 function sendMessage(){
-  let msg = chatInput.value.trim();
-  if(!msg) return;
+  const msg = chatInput.value.trim();
+  if (!msg) return;
+
+  const lower = msg.toLowerCase();
 
   chatBody.innerHTML += `<div><b>You:</b> ${msg}</div>`;
   chatInput.value = "";
 
-  let res = findResponse(msg.toLowerCase());
+  let res = null;
+
+  // 1) Memory-based follow-ups first
+  res = handleMemoryFollowUps(lower);
+
+  // 2) Smart price detection overrides everything else
+  if (!res && isPriceIntent(lower)){
+    memory.lastTopic = 'quote';
+    catchAllCounter = 0;
+    res = priceResponse;
+  }
+
+  // 3) Rule-based response if still nothing
+  if (!res){
+    res = findResponse(lower);
+    if (res) {
+      // reset catch-all streak when we hit a known rule
+      catchAllCounter = 0;
+    }
+  }
+
+  // 4) Catch-all if nothing matched at all
+  if (!res){
+    res = catchAllResponse();
+  }
 
   setTimeout(()=>{
     chatBody.innerHTML += `<div><b>Bot:</b> ${res}</div>`;
     chatBody.scrollTop = chatBody.scrollHeight;
-  },250);
+  }, 250);
 }
 
 chatSend.onclick = () => sendMessage();
-chatInput.onkeypress = e => { if(e.key==="Enter") sendMessage(); };
-
-function findResponse(msg){
-  for(let r of rules){
-    for(let k of r.keywords){
-      if(msg.includes(k)) return r.response;
-    }
-  }
-
-  return "We can definitely help! Call (704) 641-2888 or click below — a team member will get back to you shortly.<br><div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>";
-}
+chatInput.onkeypress = e => { if(e.key === "Enter") sendMessage(); };
 </script>
 
 </body>
