--- a/index.html
+++ b/index.html
@@ -163,12 +163,27 @@ footer{
   z-index:900;
   transition:0.3s ease;
 }
+
+/* OPTION A — Notification Dot When Minimized */
+.chat-widget.minimized::after {
+  content: "";
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 10px;
+  height: 10px;
+  background: #00ff64;
+  border-radius: 50%;
+  box-shadow: 0 0 8px #00ff64;
+}
+
 .chat-widget.minimized{
   height:55px;
   width:150px;
   cursor:pointer;
   overflow:hidden;
 }
+
 .chat-header{
   background:#00ff64;
   color:#000;
@@ -194,6 +209,7 @@ footer{
   overflow-y:auto;
   padding:12px;
 }
+
 .chat-input{display:flex;}
 .chat-input input{
   flex:1;
@@ -343,24 +359,23 @@ toggleChat.onclick = () => chatWidget.classList.toggle('minimized');
 setTimeout(()=>chatWidget.classList.remove('minimized'),1200);
 setTimeout(()=>chatWidget.classList.add('minimized'),4200);
 
-// SIMPLE "MEMORY"
+// SIMPLE MEMORY
 const memory = {
-  lastTopic: null,   // 'trees', 'stumps', 'location', etc.
+  lastTopic: null,
   trees: null,
   stumps: null,
   city: null
 };
 
-// TRACK HOW OFTEN CATCH-ALL HITS IN A ROW
 let catchAllCounter = 0;
 
-// PRICE RESPONSE WITH CTA (ONLY USED ON MONEY QUESTIONS)
+// PRICE RESPONSE WITH CTA
 const priceResponse =
   "We provide FREE estimates. A team member will get back to you shortly.<br><br>" +
   "<div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>";
 
-// SMART PRICE INTENT DETECTION
-function isPriceIntent(msg) {
+// SMART PRICE DETECTION
+function isPriceIntent(msg){
   const text = msg.toLowerCase();
 
   const priceWords = [
@@ -369,123 +384,87 @@ function isPriceIntent(msg) {
     "charge","charges","dollars","bucks"
   ];
 
-  for (const w of priceWords) {
-    if (text.includes(w)) return true;
+  for(const w of priceWords){
+    if(text.includes(w)) return true;
   }
 
-  // contains a dollar sign
-  if (text.includes("$")) return true;
+  if(text.includes("$")) return true;
 
-  // number with tree/stump context
-  const hasNumber = /\b\d+\b/.test(text);
-  if (hasNumber && (text.includes("tree") || text.includes("stump"))) {
-    return true;
-  }
+  const num = /\b\d+\b/.test(text);
+  if(num && (text.includes("tree") || text.includes("stump"))) return true;
 
   return false;
 }
 
-// RULE ENGINE (NO CTA INSIDE RULES – CTA ONLY FROM PRICE INTENT)
+// RULE ENGINE
 const rules = [
 
-  // TREE REMOVAL
-  {
-    keywords:["remove","tree removal","cut down"],
+  { keywords:["remove","tree removal","cut down"],
     topic:"trees",
     response:"We offer safe, insured tree removal. How many trees are you dealing with?"
   },
 
-  // TRIMMING
-  {
-    keywords:["trim","trimming","prune","shaping"],
+  { keywords:["trim","trimming","prune","shaping"],
     topic:"trees",
     response:"We provide professional trimming and shaping. Are you trimming one tree or several?"
   },
 
-  // STUMPS
-  {
-    keywords:["stump","grind","grinding"],
+  { keywords:["stump","grind","grinding"],
     topic:"stumps",
     response:"We grind stumps below ground level. How many stumps do you have?"
   },
 
-  // SERVICE / SERVICES
-  {
-    keywords:[
-      "service",
-      "services",
-      "tree service",
-      "tree services",
-      "what do you do",
-      "what services do you offer",
-      "your services",
-      "types of work",
-      "list of services",
+  { keywords:[
+      "service","services","tree service","tree services",
+      "what do you do","what services do you offer",
+      "your services","types of work","list of services",
       "do you do tree service"
     ],
     topic:"services",
     response:"We offer tree removal, trimming, stump grinding, and 24/7 emergency storm cleanup. What type of project do you need help with?"
   },
 
-  // STORM / EMERGENCY
-  {
-    keywords:["storm","fallen","emergency","wind"],
+  { keywords:["storm","fallen","emergency","wind"],
     topic:"emergency",
     response:"We offer 24/7 storm cleanup. Did the tree fall on anything or block a driveway?"
   },
 
-  // INSURANCE
-  {
-    keywords:["insured","insurance","licensed","bonded"],
+  { keywords:["insured","insurance","licensed","bonded"],
     topic:"insurance",
     response:"Yes — we are fully insured for residential and commercial projects."
   },
 
-  // SERVICE AREA (GENERAL)
-  {
-    keywords:["area","location","service area","serve","where","located","near","around"],
+  { keywords:["area","location","service area","serve","where","located","near","around"],
     topic:"location",
     response:"We service Charlotte, Matthews, Mint Hill, Pineville, Concord, Harrisburg, and nearby areas."
   },
 
-  // CITY NAMES
-  {
-    keywords:["charlotte","matthews","mint hill","pineville","concord","harrisburg"],
+  { keywords:["charlotte","matthews","mint hill","pineville","concord","harrisburg"],
     topic:"location",
     response:"Yes, we service your area and most of the greater Charlotte region."
   },
 
-  // HOURS / AVAILABILITY
-  {
-    keywords:["hours","open","close","availability","available","when open","time open","time close"],
+  { keywords:["hours","open","close","availability","available","when open","time open","time close"],
     topic:"hours",
     response:"We’re available 24/7 for all tree work and storm emergencies."
   },
 
-  // SCHEDULING
-  {
-    keywords:["schedule","time","when","day","tomorrow","today"],
+  { keywords:["schedule","time","when","day","tomorrow","today"],
     topic:"schedule",
     response:"We’re flexible and can usually work around your schedule. What day works best for you?"
   },
 
-  // FOLLOW-UP CONFIRMATIONS
-  {
-    keywords:["yes","yeah","yep","ok","okay","sure"],
+  { keywords:["yes","yeah","yep","ok","okay","sure"],
     topic:"confirm",
     response:"Got it — thanks! What else can you tell me about the job?"
   },
 
-  // PHONE
-  {
-    keywords:["call","phone"],
+  { keywords:["call","phone"],
     topic:"phone",
     response:"You can reach us anytime at (704) 641-2888."
   },
 
-  // GREETINGS
-  {
-    keywords:["hello","hi","hey"],
+  { keywords:["hello","hi","hey"],
     topic:"greeting",
     response:"Hi there! How can we help with your trees today?"
   }
@@ -495,105 +474,91 @@ function capitalize(str){
   return str.charAt(0).toUpperCase() + str.slice(1);
 }
 
-// MEMORY-BASED FOLLOW-UPS
-function handleMemoryFollowUps(lowerMsg){
-  const numMatch = lowerMsg.match(/\b\d+\b/);
+// MEMORY LOGIC
+function handleMemoryFollowUps(msg){
+  const num = msg.match(/\b\d+\b/);
 
-  // Stump count after stump topic
-  if (numMatch && memory.lastTopic === 'stumps'){
-    memory.stumps = numMatch[0];
-    return `Got it — we'll note that you have ${memory.stumps} stump(s). If you’d like pricing, just ask for a quote or say “how much”.`;
+  if(num && memory.lastTopic === "stumps"){
+    memory.stumps = num[0];
+    return `Got it — we'll note ${memory.stumps} stump(s). If you’d like pricing, just ask for a quote or say “how much”.`;
   }
 
-  // Tree count after tree topic
-  if (numMatch && memory.lastTopic === 'trees'){
-    memory.trees = numMatch[0];
-    return `Thanks — we'll note that you're asking about ${memory.trees} tree(s). If you’d like a free estimate, ask for a quote or say “how much”.`;
+  if(num && memory.lastTopic === "trees"){
+    memory.trees = num[0];
+    return `Thanks — we'll note ${memory.trees} tree(s). If you’d like a free estimate, ask for a quote or say “how much”.`;
   }
 
-  // City mention after location topic
-  if (memory.lastTopic === 'location'){
-    const cityMatch = lowerMsg.match(/charlotte|matthews|mint hill|pineville|concord|harrisburg/);
-    if (cityMatch){
-      memory.city = cityMatch[0];
-      return `Yes, we service ${capitalize(memory.city)} and the surrounding area.`;
+  if(memory.lastTopic === "location"){
+    const city = msg.match(/charlotte|matthews|mint hill|pineville|concord|harrisburg/);
+    if(city){
+      memory.city = city[0];
+      return `Yes, we service ${capitalize(memory.city)} and nearby areas.`;
     }
   }
 
   return null;
 }
 
-// RULE-BASED RESPONSE (NO CATCH-ALL HERE)
+// RULE-BASED RESPONSE
 function findResponse(msg){
-  for (let r of rules){
-    for (let k of r.keywords){
-      if (msg.includes(k)){
-        if (r.topic) memory.lastTopic = r.topic;
+  for(const r of rules){
+    for(const k of r.keywords){
+      if(msg.includes(k)){
+        memory.lastTopic = r.topic;
         return r.response;
       }
     }
   }
-  return null; // no rule hit
+  return null;
 }
 
-// CATCH-ALL LOGIC WITH PHONE REDIRECT AFTER 2 HITS
+// CATCH-ALL
 function catchAllResponse(){
   catchAllCounter++;
 
-  if (catchAllCounter === 1){
+  if(catchAllCounter === 1)
     return "I can help with anything tree-related — removal, trimming, stump grinding, or storm cleanup. Tell me a bit more about the project.";
-  }
 
-  if (catchAllCounter === 2){
+  if(catchAllCounter === 2)
     return "No worries — it might be easier to talk with someone directly. You can call us anytime at (704) 641-2888. We’re available 24/7!";
-  }
 
   return "Feel free to call us anytime at (704) 641-2888 — we’re here 24/7 to help!";
 }
 
-// SEND MESSAGE PIPELINE
+// MESSAGE PIPELINE
 function sendMessage(){
   const msg = chatInput.value.trim();
-  if (!msg) return;
+  if(!msg) return;
 
   const lower = msg.toLowerCase();
 
   chatBody.innerHTML += `<div><b>You:</b> ${msg}</div>`;
   chatInput.value = "";
 
-  let res = null;
+  let res = handleMemoryFollowUps(lower);
 
-  // 1) Memory-based follow-ups first
-  res = handleMemoryFollowUps(lower);
-
-  // 2) Smart price detection overrides everything else
-  if (!res && isPriceIntent(lower)){
-    memory.lastTopic = 'quote';
+  if(!res && isPriceIntent(lower)){
+    memory.lastTopic = "quote";
     catchAllCounter = 0;
     res = priceResponse;
   }
 
-  // 3) Rule-based response if still nothing
-  if (!res){
+  if(!res){
     res = findResponse(lower);
-    if (res) {
-      // reset catch-all streak when we hit a known rule
-      catchAllCounter = 0;
-    }
+    if(res) catchAllCounter = 0;
   }
 
-  // 4) Catch-all if nothing matched at all
-  if (!res){
+  if(!res){
     res = catchAllResponse();
   }
 
   setTimeout(()=>{
     chatBody.innerHTML += `<div><b>Bot:</b> ${res}</div>`;
     chatBody.scrollTop = chatBody.scrollHeight;
-  }, 250);
+  },250);
 }
 
-chatSend.onclick = () => sendMessage();
+chatSend.onclick = sendMessage;
 chatInput.onkeypress = e => { if(e.key === "Enter") sendMessage(); };
 </script>
 
