--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"> 
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bramos Tree Solution | Charlotte NC Tree Service</title>
 
@@ -91,8 +91,6 @@ nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
   cursor:pointer;
   box-shadow:0 0 20px #00ff64;
   transition:0.3s;
-  position:relative;
-  z-index:20;
 }
 .btn:hover{
   transform:scale(1.05);
@@ -138,7 +136,6 @@ h2{
   transform:scale(1.03);
   box-shadow:0 0 25px #00ff64;
 }
-.placeholder-box::after{content:"Image Placeholder";}
 
 /* FOOTER */
 footer{
@@ -164,26 +161,34 @@ footer{
   transition:0.3s ease;
 }
 
-/* OPTION A — Notification Dot When Minimized */
-.chat-widget.minimized::after {
-  content: "";
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  width: 10px;
-  height: 10px;
-  background: #00ff64;
-  border-radius: 50%;
-  box-shadow: 0 0 8px #00ff64;
+/* UNREAD BADGE */
+.chat-badge {
+  position:absolute;
+  top:8px;
+  right:8px;
+  background:#ff3b3b;
+  color:#fff;
+  font-weight:700;
+  padding:3px 8px;
+  border-radius:50%;
+  font-size:0.8rem;
+  display:none;
+  z-index:999;
+  box-shadow:0 0 10px #ff3b3b;
+}
+
+.chat-widget.minimized .chat-badge {
+  display:block;
 }
 
 .chat-widget.minimized{
   height:55px;
-  width:150px;
+  width:170px;
   cursor:pointer;
   overflow:hidden;
 }
 
+/* CHAT HEADER */
 .chat-header{
   background:#00ff64;
   color:#000;
@@ -204,12 +209,14 @@ footer{
   border-radius:5px;
 }
 
+/* CHAT BODY */
 .chat-body{
   height:250px;
   overflow-y:auto;
   padding:12px;
 }
 
+/* CHAT INPUT */
 .chat-input{display:flex;}
 .chat-input input{
   flex:1;
@@ -226,7 +233,7 @@ footer{
   font-weight:600;
 }
 
-/* Chat CTA Button (inside chat) */
+/* SERVICE CTA BUTTON */
 .chat-cta{
   display:inline-block;
   margin-top:10px;
@@ -238,33 +245,9 @@ footer{
   cursor:pointer;
   text-align:center;
   box-shadow:0 0 12px #00ff64;
-  transition:0.3s;
 }
 .chat-cta:hover{
   background:#00cc50;
-  box-shadow:0 0 18px #00ff64;
-}
-
-/* Fade */
-@keyframes fadeIn{
-  from{opacity:0;transform:translateY(20px);}
-  to{opacity:1;transform:translateY(0);}
-}
-
-/* MOBILE NAV */
-@media(max-width:768px){
-  nav{
-    display:none;
-    flex-direction:column;
-    background:#000;
-    position:absolute;
-    top:60px;
-    right:0;
-    width:200px;
-    padding:20px;
-  }
-  nav.open{display:flex;}
-  .hamburger{display:flex;}
 }
 </style>
 </head>
@@ -299,7 +282,6 @@ footer{
     <button class="btn" onclick="window.location.href='contact.html'">
       Get a Free Quote
     </button>
-
   </div>
 </section>
 
@@ -326,8 +308,12 @@ footer{
   <p>© 2025 Bramos Tree Solution</p>
 </footer>
 
-<!-- CHAT BOT -->
+<!-- CHAT WIDGET -->
 <div class="chat-widget minimized" id="chatWidget">
+
+  <!-- UNREAD BADGE -->
+  <span class="chat-badge" id="chatBadge">1</span>
+
   <div class="chat-header">
     <span>Ask A Question</span>
     <button id="toggleChat">-</button>
@@ -346,165 +332,200 @@ footer{
 document.getElementById('hamburger').onclick = () =>
   document.getElementById('nav').classList.toggle('open');
 
-// CHAT WIDGET
+// CHAT VARIABLES
 const chatWidget = document.getElementById('chatWidget');
+const chatBadge  = document.getElementById('chatBadge');
 const toggleChat = document.getElementById('toggleChat');
 const chatBody   = document.getElementById('chatBody');
 const chatInput  = document.getElementById('chatInput');
 const chatSend   = document.getElementById('chatSend');
 
+let firstInteraction = true;
+let unread = true;
+
+// AUTO-MINIMIZE ON LOAD
 chatWidget.classList.add('minimized');
-toggleChat.onclick = () => chatWidget.classList.toggle('minimized');
 
-setTimeout(()=>chatWidget.classList.remove('minimized'),1200);
-setTimeout(()=>chatWidget.classList.add('minimized'),4200);
+// REMOVE BADGE WHEN OPENED
+function clearBadge(){
+  unread = false;
+  chatBadge.style.display = "none";
+}
 
-// SIMPLE MEMORY
-const memory = {
-  lastTopic: null,
-  trees: null,
-  stumps: null,
-  city: null
+// TIME OF DAY GREETING
+function getGreeting(){
+  const h = new Date().getHours();
+  if (h < 12) return "Good morning!";
+  if (h < 18) return "Good afternoon!";
+  return "Good evening!";
+}
+
+// PRINT USER MESSAGE
+function userMsg(text){
+  chatBody.innerHTML += `<div><b>You:</b> ${text}</div>`;
+  chatBody.scrollTop = chatBody.scrollHeight;
+}
+
+// PRINT BOT MESSAGE + SET UNREAD
+function botMsg(text){
+  chatBody.innerHTML += `<div><b>Bot:</b> ${text}</div>`;
+  chatBody.scrollTop = chatBody.scrollHeight;
+
+  if (chatWidget.classList.contains('minimized')){
+    unread = true;
+    chatBadge.style.display = "block";
+    chatBadge.textContent = "1";
+  }
+}
+
+// AUTO-GREETING (2 MESSAGES)
+function sendInitialMessages(){
+  const greeting = getGreeting();
+  botMsg(greeting);
+  botMsg("Are you interested in any of our tree services today?");
+}
+
+// SEND INITIAL MESSAGES RIGHT AWAY AFTER LOAD
+setTimeout(() => sendInitialMessages(), 1200);
+
+// OPEN CHAT ON CLICK
+chatWidget.onclick = e => {
+  if (e.target.id !== "toggleChat"){
+    chatWidget.classList.remove('minimized');
+    clearBadge();
+  }
 };
 
-let catchAllCounter = 0;
+// TOGGLE BUTTON
+toggleChat.onclick = e => {
+  e.stopPropagation();
+  chatWidget.classList.toggle('minimized');
+  if (!chatWidget.classList.contains('minimized')) clearBadge();
+};
 
-// PRICE RESPONSE WITH CTA
-const priceResponse =
-  "We provide FREE estimates. A team member will get back to you shortly.<br><br>" +
-  "<div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>";
+// SERVICE INTENT (YES/NO ONLY ON FIRST INTERACTION)
+function handleFirstQuestion(msg){
+  const m = msg.toLowerCase();
 
-// SMART PRICE DETECTION
-function isPriceIntent(msg){
-  const text = msg.toLowerCase();
-
-  const priceWords = [
-    "quote","estimate","price","cost","how much","budget",
-    "expensive","cheap","affordable","rate","rates","fee","fees",
-    "charge","charges","dollars","bucks"
-  ];
-
-  for(const w of priceWords){
-    if(text.includes(w)) return true;
+  if (m.includes("yes")){
+    botMsg(`Great! Here's a quick link to explore our services:<br><br>
+      <div class='chat-cta' onclick="window.location.href='services.html'">View Our Services</div>`);
+    firstInteraction = false;
+    return true;
   }
 
-  if(text.includes("$")) return true;
-
-  const num = /\b\d+\b/.test(text);
-  if(num && (text.includes("tree") || text.includes("stump"))) return true;
+  if (m.includes("no")){
+    botMsg(`No problem at all! How can I help?
+    <br>Try typing: <b>"What are your hours?"</b>`);
+    firstInteraction = false;
+    return true;
+  }
 
   return false;
 }
 
-// RULE ENGINE
-const rules = [
+// RULE ENGINE + MEMORY
+const memory = { lastTopic:null, trees:null, stumps:null, city:null };
+let catchAllCounter = 0;
 
-  { keywords:["remove","tree removal","cut down"],
-    topic:"trees",
-    response:"We offer safe, insured tree removal. How many trees are you dealing with?"
-  },
-
-  { keywords:["trim","trimming","prune","shaping"],
-    topic:"trees",
-    response:"We provide professional trimming and shaping. Are you trimming one tree or several?"
-  },
-
-  { keywords:["stump","grind","grinding"],
-    topic:"stumps",
-    response:"We grind stumps below ground level. How many stumps do you have?"
-  },
-
-  { keywords:[
-      "service","services","tree service","tree services",
-      "what do you do","what services do you offer",
-      "your services","types of work","list of services",
-      "do you do tree service"
-    ],
-    topic:"services",
-    response:"We offer tree removal, trimming, stump grinding, and 24/7 emergency storm cleanup. What type of project do you need help with?"
-  },
-
-  { keywords:["storm","fallen","emergency","wind"],
-    topic:"emergency",
-    response:"We offer 24/7 storm cleanup. Did the tree fall on anything or block a driveway?"
-  },
-
-  { keywords:["insured","insurance","licensed","bonded"],
-    topic:"insurance",
-    response:"Yes — we are fully insured for residential and commercial projects."
-  },
-
-  { keywords:["area","location","service area","serve","where","located","near","around"],
-    topic:"location",
-    response:"We service Charlotte, Matthews, Mint Hill, Pineville, Concord, Harrisburg, and nearby areas."
-  },
-
-  { keywords:["charlotte","matthews","mint hill","pineville","concord","harrisburg"],
-    topic:"location",
-    response:"Yes, we service your area and most of the greater Charlotte region."
-  },
-
-  { keywords:["hours","open","close","availability","available","when open","time open","time close"],
-    topic:"hours",
-    response:"We’re available 24/7 for all tree work and storm emergencies."
-  },
-
-  { keywords:["schedule","time","when","day","tomorrow","today"],
-    topic:"schedule",
-    response:"We’re flexible and can usually work around your schedule. What day works best for you?"
-  },
-
-  { keywords:["yes","yeah","yep","ok","okay","sure"],
-    topic:"confirm",
-    response:"Got it — thanks! What else can you tell me about the job?"
-  },
-
-  { keywords:["call","phone"],
-    topic:"phone",
-    response:"You can reach us anytime at (704) 641-2888."
-  },
-
-  { keywords:["hello","hi","hey"],
-    topic:"greeting",
-    response:"Hi there! How can we help with your trees today?"
-  }
-];
-
-function capitalize(str){
-  return str.charAt(0).toUpperCase() + str.slice(1);
+function isPriceIntent(msg){
+  const t=msg.toLowerCase();
+  const priceWords=[
+    "quote","estimate","price","cost","how much","budget","dollars","bucks",
+    "affordable","expensive","rate","rates","fee","fees","charge","charges"
+  ];
+  for(const w of priceWords){ if(t.includes(w)) return true; }
+  if(t.includes("$")) return true;
+  const num=/\b\d+\b/.test(t);
+  if(num && (t.includes("tree")||t.includes("stump"))) return true;
+  return false;
 }
 
-// MEMORY LOGIC
-function handleMemoryFollowUps(msg){
-  const num = msg.match(/\b\d+\b/);
+const priceResponse =
+  "We provide FREE estimates. A team member will get back to you shortly.<br><br>" +
+  "<div class='chat-cta' onclick=\"window.location.href='contact.html'\">Get a Free Quote</div>";
 
-  if(num && memory.lastTopic === "stumps"){
-    memory.stumps = num[0];
-    return `Got it — we'll note ${memory.stumps} stump(s). If you’d like pricing, just ask for a quote or say “how much”.`;
+const rules=[
+
+  {keywords:["remove","tree removal","cut down"],topic:"trees",
+    response:"We offer safe, insured tree removal. How many trees are you dealing with?"},
+
+  {keywords:["trim","trimming","prune","shaping"],topic:"trees",
+    response:"We provide professional trimming and shaping. Are you trimming one tree or several?"},
+
+  {keywords:["stump","grind","grinding"],topic:"stumps",
+    response:"We grind stumps below ground level. How many stumps do you have?"},
+
+  {keywords:[
+    "service","services","tree service","tree services",
+    "what do you do","what services do you offer",
+    "your services","types of work","list of services",
+    "do you do tree service"
+  ],topic:"services",
+    response:"We offer tree removal, trimming, stump grinding, and 24/7 emergency storm cleanup. What type of project do you need help with?"},
+
+  {keywords:["storm","fallen","emergency","wind"],topic:"emergency",
+    response:"We offer 24/7 storm cleanup. Did the tree fall on anything or block a driveway?"},
+
+  {keywords:["insured","insurance","licensed","bonded"],topic:"insurance",
+    response:"Yes — we are fully insured for residential and commercial projects."},
+
+  {keywords:["area","location","service area","serve","where","located","near","around"],
+    topic:"location",
+    response:"We service Charlotte, Matthews, Mint Hill, Pineville, Concord, Harrisburg, and nearby areas."},
+
+  {keywords:["charlotte","matthews","mint hill","pineville","concord","harrisburg"],
+    topic:"location",
+    response:"Yes, we service your area and most of the greater Charlotte region."},
+
+  {keywords:["hours","open","close","availability","available","when open","time open","time close"],
+    topic:"hours",
+    response:"We’re available 24/7 for all tree work and storm emergencies."},
+
+  {keywords:["schedule","time","when","day","tomorrow","today"],
+    topic:"schedule",
+    response:"We’re flexible and can usually work around your schedule. What day works best for you?"},
+
+  {keywords:["call","phone"],
+    topic:"phone",
+    response:"You can reach us anytime at (704) 641-2888."},
+
+  {keywords:["hello","hi","hey"],
+    topic:"greeting",
+    response:"Hi there! How can we help with your trees today?"}
+];
+
+function handleMemory(msg){
+  const m=msg.toLowerCase();
+  const num=m.match(/\b\d+\b/);
+
+  if(num && memory.lastTopic==="stumps"){
+    memory.stumps=num[0];
+    return `Got it — we'll note ${memory.stumps} stump(s). If you want pricing, just ask for a quote.`;
   }
 
-  if(num && memory.lastTopic === "trees"){
-    memory.trees = num[0];
-    return `Thanks — we'll note ${memory.trees} tree(s). If you’d like a free estimate, ask for a quote or say “how much”.`;
+  if(num && memory.lastTopic==="trees"){
+    memory.trees=num[0];
+    return `Thanks — ${memory.trees} tree(s). If you'd like a free estimate, ask for a quote.`;
   }
 
-  if(memory.lastTopic === "location"){
-    const city = msg.match(/charlotte|matthews|mint hill|pineville|concord|harrisburg/);
+  if(memory.lastTopic==="location"){
+    const city=m.match(/charlotte|matthews|mint hill|pineville|concord|harrisburg/);
     if(city){
-      memory.city = city[0];
-      return `Yes, we service ${capitalize(memory.city)} and nearby areas.`;
+      memory.city=city[0];
+      return `Yes, we service ${city[0]} and nearby areas.`;
     }
   }
 
   return null;
 }
 
-// RULE-BASED RESPONSE
-function findResponse(msg){
+function findRule(msg){
+  const m=msg.toLowerCase();
   for(const r of rules){
     for(const k of r.keywords){
-      if(msg.includes(k)){
-        memory.lastTopic = r.topic;
+      if(m.includes(k)){
+        memory.lastTopic=r.topic;
         return r.response;
       }
     }
@@ -512,54 +533,52 @@ function findResponse(msg){
   return null;
 }
 
-// CATCH-ALL
-function catchAllResponse(){
+function catchAll(){
   catchAllCounter++;
-
-  if(catchAllCounter === 1)
-    return "I can help with anything tree-related — removal, trimming, stump grinding, or storm cleanup. Tell me a bit more about the project.";
-
-  if(catchAllCounter === 2)
-    return "No worries — it might be easier to talk with someone directly. You can call us anytime at (704) 641-2888. We’re available 24/7!";
-
-  return "Feel free to call us anytime at (704) 641-2888 — we’re here 24/7 to help!";
+  if(catchAllCounter===1)
+    return "I can help with removal, trimming, stump grinding, or storm cleanup. Tell me a bit more.";
+  if(catchAllCounter===2)
+    return "If you'd rather talk to a real person, call anytime at (704) 641-2888.";
+  return "You can reach us anytime at (704) 641-2888 — we're available 24/7.";
 }
 
-// MESSAGE PIPELINE
+// SEND MESSAGE PIPELINE
 function sendMessage(){
-  const msg = chatInput.value.trim();
+  const msg=chatInput.value.trim();
   if(!msg) return;
 
-  const lower = msg.toLowerCase();
+  userMsg(msg);
+  chatInput.value="";
 
-  chatBody.innerHTML += `<div><b>You:</b> ${msg}</div>`;
-  chatInput.value = "";
-
-  let res = handleMemoryFollowUps(lower);
-
-  if(!res && isPriceIntent(lower)){
-    memory.lastTopic = "quote";
-    catchAllCounter = 0;
-    res = priceResponse;
+  // First-interaction YES/NO logic
+  if(firstInteraction){
+    if(handleFirstQuestion(msg)) return;
+    // If irrelevant answer, still break out of first interaction
+    firstInteraction = false;
   }
 
-  if(!res){
-    res = findResponse(lower);
-    if(res) catchAllCounter = 0;
+  const mem=handleMemory(msg);
+  if(mem){ botMsg(mem); return; }
+
+  if(isPriceIntent(msg)){
+    catchAllCounter=0;
+    botMsg(priceResponse);
+    return;
   }
 
-  if(!res){
-    res = catchAllResponse();
+  const rule=findRule(msg);
+  if(rule){
+    catchAllCounter=0;
+    botMsg(rule);
+    return;
   }
 
-  setTimeout(()=>{
-    chatBody.innerHTML += `<div><b>Bot:</b> ${res}</div>`;
-    chatBody.scrollTop = chatBody.scrollHeight;
-  },250);
+  botMsg(catchAll());
 }
 
-chatSend.onclick = sendMessage;
-chatInput.onkeypress = e => { if(e.key === "Enter") sendMessage(); };
+chatSend.onclick=sendMessage;
+chatInput.onkeypress=e=>{if(e.key==="Enter")sendMessage();};
+
 </script>
 
 </body>
